Re-enable Play/Scala tests on Java 9+ (#5593)
Almost all Play/Scala tests were ignored on Java 9/10, which makes it lack coverage. This PR does:

- Update Scala version to Java9-compatible version according to [JDK compatibility](https://docs.scala-lang.org/overviews/jdk-compatibility/overview.html).
- Update default Play version to latest 2.6.15, which supports Java 9/10
- Adjust corresponding samples. Previous default Play version 2.3.10 was too old (release at 2014).
- Ignored the tests which can't work on Java 9+.
- Separate Play test resources with different versions. For example, Play 2.6 uses `build.gradle` and `Play 2.4/2.5` uses `build.gradle.old`.
- Previously `AbstractMultiVersionPlayContinuousBuildIntegrationTest` didn't have `targetPlatform` configuration, which made multi-version tests meaningless
- Fix `play-logback` configuration for `2.5.18`.