@@ -16,6 +16,7 @@
 
 package org.gradle.play.integtest.fixtures
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.executer.GradleHandle
 import org.gradle.util.VersionNumber
 
@@ -32,33 +33,12 @@ abstract class PlayMultiVersionRunApplicationIntegrationTest extends PlayMultiVe
         runningApp.initialize(build)
     }
 
-    def patchForPlay() {
-        if (versionNumber >= VersionNumber.parse('2.6.0')) {
-            addDependency("com.typesafe.play:play-guice_2.12:${version.toString()}")
-            // method at in object Assets is deprecated (since 2.6.0): Inject Assets and use Assets#at
-            // https://www.playframework.com/documentation/2.4.x/ScalaRouting#Dependency-Injection
-            replace('conf/routes', 'controllers.Assets', '@controllers.Assets')
-            // Don't know why deadlock happens on Play 2.6 System.exit
-            replace('app/controllers/Application.scala', 'System.exit(0)', 'Runtime.getRuntime().halt(0)')
+    static java9AddJavaSqlModuleArgs() {
+        if (JavaVersion.current().isJava9Compatible()) {
+            return "forkOptions.jvmArgs += ['--add-modules', 'java.sql']"
+        } else {
+            return ""
         }
-
-        if (versionNumber >= VersionNumber.parse('2.5.0')) {
-            // Failed to load class "org.slf4j.impl.StaticLoggerBinder"
-            addDependency("ch.qos.logback:logback-classic:1.2.3")
-        }
-    }
-
-    private replace(String filePath, String oldText, String newText) {
-        String text = file(filePath).text
-        file(filePath).write(text.replace(oldText, newText))
-    }
-
-    private addDependency(String dependency) {
-        buildFile << """ 
-dependencies {
-    play "${dependency}"
-}
-"""
     }
 
     String determineRoutesClassName() {
